syntax = "proto3";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  // rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHello (HelloNestedRequest) returns (HelloNestedReply) {}
  rpc SayHelloCS (stream HelloRequest) returns (HelloReply) {}
  rpc SayHellos (HelloRequest) returns (stream HelloReply) {}
  rpc SayHelloBidi (stream HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message HelloNestedRequest {
  HelloRequest firstPerson = 1;
  HelloRequest secondPerson = 2; 
}

message HelloNestedReply {
  repeated HelloReply serverMessage = 1;
}
// The request message containing the user's name.
message HelloHowOldRequest {
  int32 age = 1;
}
message HelloAge {
  int32 age = 1;
}
